# repo-wave

./: .gitignore  BingSiteAuth.xml  LICENSE  README.md  ads.txt  astro.config.mjs  package-lock.json  package.json  sitemap_test.xml  test_supabase.js  validate_sitemap.js  validate_sitemap.mjs
github-scraper/: Cargo.toml
github-scraper/src/: main.rs
public/: filter.js  robots.txt
scripts/: add_bio_column.js  add_username_column.js  pr_contributions.sql  run_migration.js
src/components/: ContributionGraph.astro  Footer.astro  IssueCard.astro  Navbar.astro  RepoCard.astro  SearchBar.astro  SidebarFilter.astro
src/layouts/: Layout.astro
src/lib/: auth-client.ts  auth.ts  db.ts  fetchAll.ts  user-store.ts  username-utils.ts
src/pages/: 404.astro  [username].astro  about.astro  bookmarks.astro  contact.astro  favourites.astro  index.astro  issues.astro  login.astro  privacy-policy.astro  profile.astro  repositories.astro  saved-issues.astro  saved-repos.astro  signup.astro  sitemap.xml.ts  sitemap.xml.ts.backup  submit-pr.astro  terms.astro
src/pages/api/: issues.ts  repos.ts
src/pages/api/auth/: [...all].ts
src/pages/api/bookmarks/: index.ts
src/pages/api/favourites/: index.ts
src/pages/api/pr/: validate.ts
src/pages/guide/: common-git-mistakes.astro  finding-good-first-issues.astro  github-contribution-guide.astro  how-maintainers-review-prs.astro  index.astro  open-source-beginner-roadmap.astro
src/pages/issue/: [...slug].astro
src/pages/pr/: [id].astro
src/pages/repo/: [...slug].astro
src/styles/: global.css
supabase/: bookmarks.sql
(+1 files in other folders)
