[package]
name = "github-scraper"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
# Add these exact features for the database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "json"] }